--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ padding-left: 3vmin;
     margin-left: 3vmin;
     margin-right: 3vmin;
     box-shadow: 5px 5px 10px rgb(11, 9, 9);
-    background-image: url('profile3.jpg');
+    background-image: url('https://media.licdn.com/dms/image/v2/D5603AQFjAhzcFI1heA/profile-displayphoto-shrink_100_100/B56ZPqTH0eHoAU-/0/1734802703021?e=1749686400&v=beta&t=aYx706ms4SCaGYev4qOR5oAiRSL6IcR2JFT242OrnpA');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
